# rust-practice

./: .gitignore  Cargo.toml  README.md
abi/: Cargo.toml  config.yaml
abi/protos/: messages.proto
abi/src/: config.rs  errors.rs  lib.rs
abi/src/pb/: message.rs
cache/: Cargo.toml
cache/src/: lib.rs
cache/src/redis/: mod.rs
chat/: Cargo.toml
chat/src/: main.rs
consumer/: Cargo.toml
consumer/src/: main.rs
db/src/database/: mod.rs
db/src/database/postgres/: mod.rs
doc/: 1-后端架构详解.md  10-pusher服务.md  11-consumer服务.md  2-项目搭建.md  3-构建ws模块.md  4-增加基础设施.md  5-注册中心与服务发现.md  6-chat服务.md  7-修改ws模块.md  8-缓存模块.md  9-db服务.md
list/: Cargo.toml
list/examples/: linked_list.rs  linked_list_unsafe.rs  list.rs
migrations/: 20240509030031_messages.sql
pusher/: Cargo.toml
pusher/src/: main.rs
sandcat_prectice/: .env  Cargo.toml  docker-compose.yml
sandcat_prectice/abi/: build.rs
sandcat_prectice/abi/protos/: messages.proto
sandcat_prectice/abi/src/: lib.rs
sandcat_prectice/cache/src/: lib.rs
sandcat_prectice/db/: Cargo.toml
sandcat_prectice/db/src/: main.rs
sandcat_prectice/utils/: Cargo.toml
sandcat_prectice/utils/src/: lib.rs  tonic_service_discovery.rs
sandcat_prectice/ws/: Cargo.toml
sandcat_prectice/ws/src/: client.rs  main.rs
utils/src/: lib.rs  tonic_service_discovery.rs  typos.rs
utils/src/consul/: mod.rs
ws/: Cargo.toml
ws/src/: main.rs  manager.rs  rpc.rs  ws_server.rs
