[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.80"
redis = { version = "0.25.3", features = ["tokio-comp"] }
