[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
nanoid = "0.4.0"
rdkafka = { version = "0.36.2", features = ["dynamic-linking"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utils = { version = "0.1.0", path = "../utils" }
