[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
cache = { version = "0.1.0", path = "../cache" }
rdkafka = { version = "0.36.2", features = ["dynamic-linking"] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utils = { version = "0.1.0", path = "../utils" }
