[package]
name = "pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.80"
dashmap = "5.5.3"
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utils = { version = "0.1.0", path = "../utils" }
