[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
axum = { version = "0.7.5", features = ["ws"] }
dashmap = "5.5.3"
futures = "0.3.30"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
