[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.80"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utils = { version = "0.1.0", path = "../utils" }
