[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.80"
hostname = "0.4.0"
http = "0.2.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.201"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tower = "0.4.13"
tracing = "0.1.40"
